Début de l'internationalisation

--- a/web/addCustomer.xhtml
+++ b/web/addCustomer.xhtml
@@ -6,6 +6,8 @@
         <title>Ajouter un client</title>
     </h:head>
     <h:body>
+        <h:outputLabel value="#{msg['label.titre.ajouterClient']}"></h:outputLabel>
+        
         <h1>Ajout d'un client</h1>
         <h:form>
             N° du client : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
