--- a/web/addCustomer.xhtml
+++ b/web/addCustomer.xhtml
@@ -13,8 +13,8 @@
             N° du client : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
             Prénom : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
             Nom : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
-            Date de naissance: <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
-            E-mail : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
+            <!--Date de naissance: <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>
+            E-mail : <h:inputText></h:inputText><h:outputText value="&lt;br/&gt;" escape="false"/>-->
             <h:commandButton type="submit" value="Ajouter le client"></h:commandButton>
         </h:form>
     </h:body>
